[Addition] Overflow problem should be solved.

--- a/OADigitalWebsite/wwwroot/css/site.css
+++ b/OADigitalWebsite/wwwroot/css/site.css
@@ -18,7 +18,7 @@
 p {
   line-height: 25px;
 }
-body {
+.wrapperx {
   overflow-x: hidden;
 }
 .fontColour {
@@ -495,7 +495,7 @@ img {
   display: flex;
   flex-direction: row;
   width: 550px;
-  overflow: hidden;
+  overflow-x: hidden;
   box-shadow: 0 .1rem 1rem rgba(0, 0, 0, 0.1);
   border-radius: 24px;
 }
